--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@color/colorAccent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".Register">
@@ -13,14 +13,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Register"
+        android:text="@string/register"
         android:textSize="36sp" />
+
+    <EditText
+        android:id="@+id/edittext_Username"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:layout_marginTop="90dp"
+        android:ems="10"
+        android:hint="@string/name"
+        android:inputType="text"
+        android:textColorHint="#ffffff"
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/edittext_email"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginTop="90dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="text"
@@ -57,11 +67,12 @@
         android:background="@drawable/round_button"
         android:text="@string/register"
         android:textSize="22sp" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -73,10 +84,10 @@
             android:id="@+id/textview_login"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:text="@string/login"
             android:paddingLeft="10dp"
-            android:textStyle="bold"
-            android:textSize="24dp" />
+            android:text="@string/Signin"
+            android:textSize="24dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </LinearLayout>
