--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,10 @@
             android:title="Tender Status" />
         <item
             android:id="@+id/nav_slideshow"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="Settings" />
+        <item
+            android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_baseline_power_settings_new_24"
             android:title="Logout" />
     </group>
