--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,18 +7,18 @@
         <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_baseline_add_circle_24"
-            android:title="Add Tender" />
+            android:title="@string/add_tender" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Tender Status" />
+            android:title="@string/tender_status" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_settings"
             android:icon="@android:drawable/ic_menu_preferences"
-            android:title="Settings" />
+            android:title="@string/settings" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_logout"
             android:icon="@drawable/ic_baseline_power_settings_new_24"
-            android:title="Logout" />
+            android:title="@string/logout" />
     </group>
 </menu>
