--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,74 +7,97 @@
 <!--    tools:context=".ui.home.HomeFragment">-->
 
 <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:background="@color/background"
-android:gravity="center_horizontal"
-android:orientation="vertical"
-tools:context=".addtender">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/side_nav_bar"
+    tools:context=".addtender">
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="80dp"
-    android:text="Add Tender"
-    android:textSize="36sp" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="50dp"
+        android:text="Add Tender"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@+id/edittext_addtitle"
+        app:layout_constraintStart_toStartOf="@+id/edittext_addtitle"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<EditText
-    android:id="@+id/edittext_addtitle"
-    android:layout_width="wrap_content"
-    android:layout_height="65dp"
-    android:layout_marginTop="50dp"
-    android:ems="10"
-    android:hint="@string/add_title"
-    android:inputType="text"
-    android:textColorHint="#ffffff"
-    android:textSize="20sp" />
+    <EditText
+        android:id="@+id/edittext_addtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:ems="10"
+        android:hint="@string/add_title"
+        android:inputType="text"
+        android:textColorHint="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-<EditText
-    android:id="@+id/editTextTextMultiLine"
-    android:layout_width="wrap_content"
-    android:layout_height="65dp"
-    android:layout_marginTop="10dp"
-    android:ems="10"
-    android:gravity="start|top"
-    android:hint="@string/description"
-    android:inputType="textMultiLine"
-    android:textColorHint="#ffffff"
-    android:textSize="20sp"/>
+    <EditText
+        android:id="@+id/editTextTextMultiLine"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="@string/description"
+        android:inputType="textMultiLine"
+        android:textColorHint="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/path"
+        app:layout_constraintStart_toStartOf="@+id/edittext_addtitle"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_addtitle" />
 
-<TextView
-    android:id="@+id/path"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:text="File Name"
-    android:layout_gravity="center"
-    android:textSize="15dp"
-    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-    />
+    <TextView
+        android:id="@+id/path"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="File Name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_file"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
 
     <Button
         android:id="@+id/button_file"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="31dp"
         android:background="@drawable/round_button"
         android:gravity="center"
         android:text="@string/select_file"
-        android:textSize="22sp" />
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/path" />
 
     <Button
         android:id="@+id/button_register"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_width="122dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="244dp"
         android:background="@drawable/round_button"
         android:text="@string/add"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_file" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
